Actually fixed overlapping issue this time

--- a/src/css/Style-CustomizationPanel.scss
+++ b/src/css/Style-CustomizationPanel.scss
@@ -11,6 +11,7 @@
   width: 20em;
   top: 25%;
   height: fit-content;
+  z-index: 1000;
 }
 
 .option-container {
